# ChatBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: litellm_config.yaml
scripts/: ingest_knowledge.py  setup_qdrant.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: __init__.py  admin.py  health.py  webhooks.py
src/core/: __init__.py  config.py  exceptions.py
src/models/: __init__.py  conversation.py  message.py  tenant.py
src/services/: __init__.py
src/services/channels/: __init__.py  base.py  whatsapp.py
src/services/conversation/: __init__.py  engine.py  handoff.py  memory.py
src/services/llm/: __init__.py  provider.py
src/services/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
src/services/sentiment/: __init__.py  analyzer.py
src/storage/: __init__.py  base.py  firestore.py  memory.py
tests/: __init__.py  conftest.py  test_embeddings.py  test_health.py  test_sentiment.py  test_storage.py
